--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>gryns_webblog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gryns_webblog</name>
-	<description>Spring Boot Webblog Project</description>
+	<description>Spring Boot Webblog Project 1</description>
 
 	<properties>
 		<java.version>1.8</java.version>
