--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://tomcat:8080/manager/text</url>
+					<url>http://37.4.254.190:8080/manager/text</url>
 					<server>tomcat</server>
 					<path>/gryns_webblog</path>
 				</configuration>
