--- a/deploy.yml
+++ b/deploy.yml
@@ -14,6 +14,7 @@
         repository_url: http://nexus:8081/repository/maven-snapshots/
         #dest: /var/jenkins_home/
         dest: /usr/local/tomcat/webapps/
+        mode: 0777
 
     #- name: Copy Webblog WAR File to Tomcat
       #copy:
